# Linux-StreamDock-CPPSDK

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_CN.md  ThirdPartyNotice.txt  build.bat  build.sh
StreamDock_CppSDK/: CMakeLists.txt  demo.cpp
StreamDock_CppSDK/cmake/: demo.cmake
StreamDock_CppSDK/include/: DeviceManager.h  ProductIDs.h  StreamDock.h  StreamDock293.h  StreamDock293V3.h  StreamDockN1.h  StreamDockN3V25.h  StreamDockN4.h  TranSport.h
StreamDock_CppSDK/lib/: libhidapi-libusb.so.0  transport.lib  transportd.lib
StreamDock_CppSDK/src/: DeviceManager.cpp  StreamDock.cpp  StreamDock293.cpp  StreamDock293V3.cpp  StreamDockN1.cpp  StreamDockN3V25.cpp  StreamDockN4.cpp
